--- a/#src/index.html
+++ b/#src/index.html
@@ -85,74 +85,140 @@
 									<div class="members__item item-member">
 										<div class="item-member__body">
 											<div class="item-member__header">
-												<div class="item-member__name">Светлана Фарниева</div>
+												<div class="item-member__name">Балбабян Григор</div>
 												<div class="item-member__position"></div>
 											</div>
 											<div class="item-member__photo _ibg">
-												<img src="./img/members/Фарниева.jpg" alt="Светлана Фарниева">
+												<img src="./img/members/Балбабян.jpeg" alt="Балбабян Григор">
 											</div>
 											<div class="item-member__description description-member">
-												<div class="description-member__part">Живет и работает в Калуге! Родилась в Московской области. С 4 лет до 14 проживала в г. Перми, где закончила художественную школу, С 1978 по 1982 гг. обучалась в МСХШ при МГАХИ им В.И. Сурикова на специальности «скульптура». С 1982 г училась на скульптурном факультете в МГАХИ им В.И. Сурикова, который окончила в 1988 г. с «отличием».</div>
+												<div class="description-member__part">Родился в г.Ереване 1976 г.
+													Заниматься керамикой начал в 1997 году. Фотографируя работы друзей, сам загорелся изяществом пластики керамики. С тех пор не перестает удивляться и восхищаться этим видом искусства.</div>
+												<div class="description-member__part description-member__part_hide">Кредо:
+													Гончарю с удовольствием, тем более это особая медитация, которая воспитывает характер и открывает новые горизонты мировоззрения. Скульптура в керамике в соединении цветовой гаммы даёт безграничное поле творчества.</div>
+											</div>
+											<div class="item-member__footer">
+												<button  class="item-member__expand _icon-expand-arrow"></button>
+											</div>
+										</div>
+									</div>
+									<div class="members__item item-member">
+										<div class="item-member__body">
+											<div class="item-member__header">
+												<div class="item-member__name">Марамыгина Анна</div>
+												<div class="item-member__position"></div>
+											</div>
+											<div class="item-member__photo _ibg">
+												<img src="./img/members/Марамыгина.webp" alt="Марамыгина Анна">
+											</div>
+											<div class="item-member__description description-member">
+												<div class="description-member__part">
+													Родилась в 1988 г. в г. Пермь.\nОбразование: Санкт-Петербургская художественно-промышленная академия им. А.Л. Штиглица, кафедра керамики и стекла(2010г. -2016г.)
+												</div>
 												<div class="description-member__part description-member__part_hide">
-													В городах: Калуга, Мещовск, Юхнов, Кондрово, Мосальск, Людиново. Ферзиково, селе Похвиснего Тарусского района установлены скульптурные композиции (памятник, Ветерану, Циолковский с велосипедом( Грёзы о небе), памятник Кондырёву, Голуби, Олимпиец, Мать в сквере Матери, памятник Сельскому Участковому, памятник Журналист и Оператор, памятник Фёдорову С.и т.п.) и бюсты ( Н. Будашкину, С. Туликову, М. Яншину, Е. Ваинмайеру, А. Пушкину , А.Карпову, А.Прокошиной ), памятные доски ( Ракову, А. .Кандрёнкову, В. фон Плеве, барельефы мемориала Павшим в Мещовске), а также памятник С. Фёдорову в Москве.
-													Совмещая творчество и преподавательскую работу, Светлана Фарниева является неоднократным дипломантом областного конкурса им. А. Куликова, премии Союза Художников (КОСХ), участником Республиканских., Зональных и областных выставок, награждена Грамотой Союза Художников России и Серебряной Медалью « За верность традициям».
+													Кредо:\nКерамика для меня это и цвет, и форма, живопись и скульптура одновременно.
+													Ещё мне нравится, что этот материал даёт мне богатую палитру цветов. В глине я могу выразить все свои эмоции, все свои чувства. Любимая тема моего творчества - лес. Лес таинственный и загадочный. Любимые техники - это дровяной обжиг раку и цветные глазури.
 												</div>
 											</div>
 											<div class="item-member__footer">
 												<button  class="item-member__expand _icon-expand-arrow"></button>
 											</div>
 										</div>
-
 									</div>
+
 									<div class="members__item item-member">
 										<div class="item-member__body">
 											<div class="item-member__header">
-												<div class="item-member__name">Михаил Соломатин</div>
+												<div class="item-member__name">Левитина Ирина</div>
 												<div class="item-member__position"></div>
 											</div>
 											<div class="item-member__photo _ibg">
-												<img src="./img/members/Соломатин.jpg" alt="Михаил Соломатин">
+												<img src="./img/members/Левитина.webp" alt="Левитина Ирина">
 											</div>
 											<div class="item-member__description description-member">
 												<div class="description-member__part">
-													Родился 22 октября 1970 г. в п. Лесной Московская обл., Пушкинский район. Окончил АХПУ в 1994г., МГАХИ им. Сурикова в 2000г., творческие мастерские при академии художеств под руководством В. Е. Цигаля. Член Московского союза художников.</div>
-												<div class="description-member__part description-member__part_hide">Автор памятников материнство в Красногорске, Кириллу и Мефодию в Твери, князю Даниилу Московскому в г. Данилове Ярославской области. Участник многочисленных выставок.</div>
-											</div>
-											<div class="item-member__footer">
-												<button  class="item-member__expand _icon-expand-arrow"></button>
-											</div>
-										</div>
-									</div>
-									<div class="members__item item-member">
-										<div class="item-member__body">
-											<div class="item-member__header">
-												<div class="item-member__name">Евгений Гоманов</div>
-												<div class="item-member__position"></div>
-											</div>
-											<div class="item-member__photo _ibg">
-												<img src="./img/members/Гоманов.jpg" alt="Евгений Гоманов">
-											</div>
-											<div class="item-member__description description-member">
-												<div class="description-member__part">Живет и работает в Москве.
-													Родился в России, в городе Ростове-на-Дону. Закончил Ростовское художественное училище имени Грекова, отделение скульптура в 2004 году, затем в 2012 году закончил МГАХИ имени Сурикова, отделение скульптура, в городе Москва. В 2012 году работал преподавателем скульптуры в Международном Художественном Институте города Хайнань в КНР.
-													Член секции скульптуры МСХ и ОМС.</div>
+													Закончила Абрамцевское художественно-промышленное училище им. В.М. Васнецова, отделение «художественная керамика». \n Член СХ России с 1990 г., народный мастер \n Работала художником на фаянсовом заводе в г. Симикаракорск. \n Познакомилась с замечательной Филимоновской игрушкой, осталась на родине промысла. С командой энтузиастов поднимала и возрождала народную игрушку.
+												</div>
 												<div class="description-member__part description-member__part_hide">
-													2016: Участие в международном фестивале песчаной скульптуры, Москва.
-													Участие в создании арт-объектов для архитектурной биеннале в Венеции.
-													Участие в создании декорации для спектакля в Московском драматическом театре им. А.С. Пушкина.
-													Выставка «Ледовая Москва» на Поклонной горе.
-													Выставка ледяных скульптур спортивных достижений, Ледовый Дворец ВТБ, Москва.
-													2017: Лауреат III степени IV открытого фестиваля по ледовой скульптуре, Томск.
-													Лауреат II степени V Международного Кубка по ледовой скульптуре, Пермь.
-													Выставка «Ледовая Москва» на Поклонной горе, Москва.
-													Создание арт-объекта для Всероссийского форума продовольственной безопасности, Ростов-на-Дону.
-													2018: Выставка «Ледовая Москва» на Поклонной горе Москва.</div>
+													Живет и работает в г. Калуге и в п. Одоеве, имеет свою мастерскую. \n Участник многих всероссийских и международных выставок. Работы хранятся в музеях России и мира.
+												</div>
 											</div>
 											<div class="item-member__footer">
 												<button  class="item-member__expand _icon-expand-arrow"></button>
 											</div>
 										</div>
 									</div>
+<!--									<div class="members__item item-member">-->
+<!--										<div class="item-member__body">-->
+<!--											<div class="item-member__header">-->
+<!--												<div class="item-member__name">Светлана Фарниева</div>-->
+<!--												<div class="item-member__position"></div>-->
+<!--											</div>-->
+<!--											<div class="item-member__photo _ibg">-->
+<!--												<img src="./img/members/Фарниева.jpg" alt="Светлана Фарниева">-->
+<!--											</div>-->
+<!--											<div class="item-member__description description-member">-->
+<!--												<div class="description-member__part">Живет и работает в Калуге! Родилась в Московской области. С 4 лет до 14 проживала в г. Перми, где закончила художественную школу, С 1978 по 1982 гг. обучалась в МСХШ при МГАХИ им В.И. Сурикова на специальности «скульптура». С 1982 г училась на скульптурном факультете в МГАХИ им В.И. Сурикова, который окончила в 1988 г. с «отличием».</div>-->
+<!--												<div class="description-member__part description-member__part_hide">-->
+<!--													В городах: Калуга, Мещовск, Юхнов, Кондрово, Мосальск, Людиново. Ферзиково, селе Похвиснего Тарусского района установлены скульптурные композиции (памятник, Ветерану, Циолковский с велосипедом( Грёзы о небе), памятник Кондырёву, Голуби, Олимпиец, Мать в сквере Матери, памятник Сельскому Участковому, памятник Журналист и Оператор, памятник Фёдорову С.и т.п.) и бюсты ( Н. Будашкину, С. Туликову, М. Яншину, Е. Ваинмайеру, А. Пушкину , А.Карпову, А.Прокошиной ), памятные доски ( Ракову, А. .Кандрёнкову, В. фон Плеве, барельефы мемориала Павшим в Мещовске), а также памятник С. Фёдорову в Москве.-->
+<!--													Совмещая творчество и преподавательскую работу, Светлана Фарниева является неоднократным дипломантом областного конкурса им. А. Куликова, премии Союза Художников (КОСХ), участником Республиканских., Зональных и областных выставок, награждена Грамотой Союза Художников России и Серебряной Медалью « За верность традициям».-->
+<!--												</div>-->
+<!--											</div>-->
+<!--											<div class="item-member__footer">-->
+<!--												<button  class="item-member__expand _icon-expand-arrow"></button>-->
+<!--											</div>-->
+<!--										</div>-->
+
+<!--									</div>-->
+<!--									<div class="members__item item-member">-->
+<!--										<div class="item-member__body">-->
+<!--											<div class="item-member__header">-->
+<!--												<div class="item-member__name">Михаил Соломатин</div>-->
+<!--												<div class="item-member__position"></div>-->
+<!--											</div>-->
+<!--											<div class="item-member__photo _ibg">-->
+<!--												<img src="./img/members/Соломатин.jpg" alt="Михаил Соломатин">-->
+<!--											</div>-->
+<!--											<div class="item-member__description description-member">-->
+<!--												<div class="description-member__part">-->
+<!--													Родился 22 октября 1970 г. в п. Лесной Московская обл., Пушкинский район. Окончил АХПУ в 1994г., МГАХИ им. Сурикова в 2000г., творческие мастерские при академии художеств под руководством В. Е. Цигаля. Член Московского союза художников.</div>-->
+<!--												<div class="description-member__part description-member__part_hide">Автор памятников материнство в Красногорске, Кириллу и Мефодию в Твери, князю Даниилу Московскому в г. Данилове Ярославской области. Участник многочисленных выставок.</div>-->
+<!--											</div>-->
+<!--											<div class="item-member__footer">-->
+<!--												<button  class="item-member__expand _icon-expand-arrow"></button>-->
+<!--											</div>-->
+<!--										</div>-->
+<!--									</div>-->
+<!--									<div class="members__item item-member">-->
+<!--										<div class="item-member__body">-->
+<!--											<div class="item-member__header">-->
+<!--												<div class="item-member__name">Евгений Гоманов</div>-->
+<!--												<div class="item-member__position"></div>-->
+<!--											</div>-->
+<!--											<div class="item-member__photo _ibg">-->
+<!--												<img src="./img/members/Гоманов.jpg" alt="Евгений Гоманов">-->
+<!--											</div>-->
+<!--											<div class="item-member__description description-member">-->
+<!--												<div class="description-member__part">Живет и работает в Москве.-->
+<!--													Родился в России, в городе Ростове-на-Дону. Закончил Ростовское художественное училище имени Грекова, отделение скульптура в 2004 году, затем в 2012 году закончил МГАХИ имени Сурикова, отделение скульптура, в городе Москва. В 2012 году работал преподавателем скульптуры в Международном Художественном Институте города Хайнань в КНР.-->
+<!--													Член секции скульптуры МСХ и ОМС.</div>-->
+<!--												<div class="description-member__part description-member__part_hide">-->
+<!--													2016: Участие в международном фестивале песчаной скульптуры, Москва.-->
+<!--													Участие в создании арт-объектов для архитектурной биеннале в Венеции.-->
+<!--													Участие в создании декорации для спектакля в Московском драматическом театре им. А.С. Пушкина.-->
+<!--													Выставка «Ледовая Москва» на Поклонной горе.-->
+<!--													Выставка ледяных скульптур спортивных достижений, Ледовый Дворец ВТБ, Москва.-->
+<!--													2017: Лауреат III степени IV открытого фестиваля по ледовой скульптуре, Томск.-->
+<!--													Лауреат II степени V Международного Кубка по ледовой скульптуре, Пермь.-->
+<!--													Выставка «Ледовая Москва» на Поклонной горе, Москва.-->
+<!--													Создание арт-объекта для Всероссийского форума продовольственной безопасности, Ростов-на-Дону.-->
+<!--													2018: Выставка «Ледовая Москва» на Поклонной горе Москва.</div>-->
+<!--											</div>-->
+<!--											<div class="item-member__footer">-->
+<!--												<button  class="item-member__expand _icon-expand-arrow"></button>-->
+<!--											</div>-->
+<!--										</div>-->
+<!--									</div>-->
 								</div>
 
 								<div class="members__part members__part_additional">
