feat: added new members

--- a/#src/index.html
+++ b/#src/index.html
@@ -13,9 +13,16 @@
 				</section>
 				<section class="philosophy" id="philosophy">
 					<div class="philosophy__container _container">
-						<h2 class="philosophy__title">Цель фестиваля современной скульптуры:</h2>
+						<h2 class="philosophy__title">Философия фестиваля «Млечный Путь»:</h2>
 						<div class="philosophy__text">
-							Продвижение современных тенденций в сфере скульптуры и искусства. Знакомство с творчеством ведущих скульпторов России. Популяризация и развитие искусства современной скульптуры в Калужском регионе.
+							Формула Трансформации может быть разной. Для каждого человека она своя. Каждый человек – индивидуальная личность во Вселенной!
+							А Вселенная, в свою очередь, активно эволюционирует и подвергается постоянной трансформации!
+							<br><br>
+							Учёные и эксперты уже несколько лет говорят о квантовом переходе Земли. Многие люди не знают, что это такое, но заметили, что время будто бы ускорилось.
+							День проходит как один миг, события стремительно сменяются одно за другим, а душа как будто проходит какую-то встряску.
+							Все  задаются вопросами своего предназначения, терзаются мыслями, как приносить больше пользы людям, говорят о вибрациях и высоких материях!
+							<br><br>
+							Тема фестиваля современной керамики в этом году посвящена трансформации и мы попытаемся найти  ее формулу через наши работы в области керамики и современного искусства!
 						</div>
 					</div>
 				</section>
@@ -49,30 +56,30 @@
 							<a href="https://nedelya40.ru/vne-granej-i-orbit_175931/" class="aboutus__smi" target="_blank" rel="noopener">
 								<img src="./img/aboutus/nedelya40.png" alt="Неделя 40">
 							</a>-->
-							<a href="https://nedelya40.ru/obrazy-na-grani_207669/" class="aboutus__smi" target="_blank" rel="noopener">
-								<img src="./img/aboutus/nedelya40.png" alt="Неделя 40">
-							</a>
-							<a href="https://nikatv.ru/tv/programs/kulturnaya-sreda/b6YIfQDmahw3iPFwDFqq" class="aboutus__smi" target="_blank" rel="noopener">
-								<img src="./img/aboutus/nikaTV.webp" alt="НикаТВ">
-							</a>
-							<a href="https://kgvinfo.ru/novosti/obshchestvo/vystavkoy-opticheskogo-stekla-strasti-po-palmire-v-kaluge-zavershilsya-i-festival-sovremennoy-skulpt/?sphrase_id=833898" class="aboutus__smi" target="_blank" rel="noopener">
-								<img src="./img/aboutus/kginfo.gif" alt="НикаТВ">
-							</a>
-							<a href="https://kgvinfo.ru/novosti/obshchestvo/kaluzhan-priglashayut-na-festival-sovremennoy-skulptury/?sphrase_id=833898" class="aboutus__smi" target="_blank" rel="noopener">
-								<img src="./img/aboutus/kginfo.gif" alt="НикаТВ">
-							</a>
-							<a href="https://vk.com/feed?w=wall7099557_7850" class="aboutus__smi" target="_blank" rel="noopener">
-								<img src="./img/aboutus/vk.jpg" alt="НикаТВ">
-							</a>
-							<a href="https://vk.com/wall-161718236_27361" class="aboutus__smi" target="_blank" rel="noopener">
-								<img src="./img/aboutus/vk.jpg" alt="НикаТВ">
-							</a>
-							<a href="https://vk.com/wall-161718236_27307" class="aboutus__smi" target="_blank" rel="noopener">
-								<img src="./img/aboutus/vk.jpg" alt="НикаТВ">
-							</a>
-							<a href="https://vk.com/wall-161718236_27231" class="aboutus__smi" target="_blank" rel="noopener">
-								<img src="./img/aboutus/vk.jpg" alt="НикаТВ">
-							</a>
+<!--							<a href="https://nedelya40.ru/obrazy-na-grani_207669/" class="aboutus__smi" target="_blank" rel="noopener">-->
+<!--								<img src="./img/aboutus/nedelya40.png" alt="Неделя 40">-->
+<!--							</a>-->
+<!--							<a href="https://nikatv.ru/tv/programs/kulturnaya-sreda/b6YIfQDmahw3iPFwDFqq" class="aboutus__smi" target="_blank" rel="noopener">-->
+<!--								<img src="./img/aboutus/nikaTV.webp" alt="НикаТВ">-->
+<!--							</a>-->
+<!--							<a href="https://kgvinfo.ru/novosti/obshchestvo/vystavkoy-opticheskogo-stekla-strasti-po-palmire-v-kaluge-zavershilsya-i-festival-sovremennoy-skulpt/?sphrase_id=833898" class="aboutus__smi" target="_blank" rel="noopener">-->
+<!--								<img src="./img/aboutus/kginfo.gif" alt="НикаТВ">-->
+<!--							</a>-->
+<!--							<a href="https://kgvinfo.ru/novosti/obshchestvo/kaluzhan-priglashayut-na-festival-sovremennoy-skulptury/?sphrase_id=833898" class="aboutus__smi" target="_blank" rel="noopener">-->
+<!--								<img src="./img/aboutus/kginfo.gif" alt="НикаТВ">-->
+<!--							</a>-->
+<!--							<a href="https://vk.com/feed?w=wall7099557_7850" class="aboutus__smi" target="_blank" rel="noopener">-->
+<!--								<img src="./img/aboutus/vk.jpg" alt="НикаТВ">-->
+<!--							</a>-->
+<!--							<a href="https://vk.com/wall-161718236_27361" class="aboutus__smi" target="_blank" rel="noopener">-->
+<!--								<img src="./img/aboutus/vk.jpg" alt="НикаТВ">-->
+<!--							</a>-->
+<!--							<a href="https://vk.com/wall-161718236_27307" class="aboutus__smi" target="_blank" rel="noopener">-->
+<!--								<img src="./img/aboutus/vk.jpg" alt="НикаТВ">-->
+<!--							</a>-->
+<!--							<a href="https://vk.com/wall-161718236_27231" class="aboutus__smi" target="_blank" rel="noopener">-->
+<!--								<img src="./img/aboutus/vk.jpg" alt="НикаТВ">-->
+<!--							</a>-->
 						</div>
 					</div>
 				</section>
@@ -236,66 +243,66 @@
 					<div class="program__container _container">
 						<h2 class="program__title title">Программа фестиваля</h2>
 						<div class="program__body">
-							<div class="program__billboard billboard">
-								<div class="billboard__header">
-									<div class="billboard__date">Суббота, 02 октября</div>
-									<div class="billboard__title">
-										<h3>Открытие фестиваля современной скульптуры</h3>
-									</div>
-								</div>
-								<div class="billboard__content">
-									<div class="billboard__images">
-										<!--<div class="billboard__image-item _ibg pb140">
-											<div class="billboard__overlay"></div>
-											<button class="billboard__button _icon-search"></button>
-											<img src="./img/programs/billboard1.webp" alt="Афиша фестиваля Млечный путь">
-										</div>-->
-<!--										<div class="billboard__image-item _ibg pb100">
-											<div class="billboard__overlay"></div>
-											<button class="billboard__button _icon-search"></button>
-											<img src="./img/programs/billboard2.webp" alt="Афиша Город Космос Люди">
-										</div>-->
-									</div>
-									<div class="billboard__program">
-										<p>12.00 - 20.00 - маркет</p>
-										<p>12.00 - мастер-класс от Карины Саитовой (Калуга)</p>
-										<p>13.00 - мастер-класс от Светланы Фарниевой (Калуга)</p>
-										<p>14.00 - мастер-класс от Яны Меркуловой (Обнинск «МастерГрад»)</p>
-										<p>15.00 - мастер-класс от Андрея Молчановского (Москва)</p>
-										<p>16.00 - мастер-класс от Светланы Слесаревой (Обнинск «МастерГрад»)</p>
-										<p>17.00  -мастер-класс от Михаила Соломатина (Москва)</p>
-									</div>
-								</div>
-							</div>
-							<div class="program__billboard billboard">
-								<div class="billboard__header">
-									<div class="billboard__date">Воскресенье, 03 октября</div>
-									<div class="billboard__title">
-									</div>
-								</div>
-								<div class="billboard__content">
-									<div class="billboard__images">
-										<!--<div class="billboard__image-item _ibg pb177">
-											<div class="billboard__overlay">
-											</div>
-											<button class="billboard__button _icon-search"></button>
-											<img src="./img/programs/billboard3.webp" alt="Афиша Серебренные облака">
-										</div>
-										<div class="billboard__image-item _ibg pb140">
-											<div class="billboard__overlay">
-											</div>
-											<button class="billboard__button _icon-search"></button>
-											<img src="./img/programs/billboard4.webp" alt="DJ Uncle Deep">
-										</div>-->
-									</div>
-									<div class="billboard__program">
-										<p>15.00 - мастер-класс от Маргариты Камардиной (Москва)</p>
-										<p>17.00 - мастер-класс от Евгения Гоманова (Москва)</p>
-										<p>19.00 - Вернисаж работ Андрея Молчановского. Локация-выставочный зал ИКЦ</p>
-										<p>Перформанс от ИТБ & Студия хореографии ИКЦ. Руководитель- Ксения Голыжбина</p>
-									</div>
-								</div>
-							</div>
+<!--							<div class="program__billboard billboard">-->
+<!--								<div class="billboard__header">-->
+<!--									<div class="billboard__date">Суббота, 02 октября</div>-->
+<!--									<div class="billboard__title">-->
+<!--										<h3>Открытие фестиваля современной скульптуры</h3>-->
+<!--									</div>-->
+<!--								</div>-->
+<!--								<div class="billboard__content">-->
+<!--									<div class="billboard__images">-->
+<!--										&lt;!&ndash;<div class="billboard__image-item _ibg pb140">-->
+<!--											<div class="billboard__overlay"></div>-->
+<!--											<button class="billboard__button _icon-search"></button>-->
+<!--											<img src="./img/programs/billboard1.webp" alt="Афиша фестиваля Млечный путь">-->
+<!--										</div>&ndash;&gt;-->
+<!--&lt;!&ndash;										<div class="billboard__image-item _ibg pb100">-->
+<!--											<div class="billboard__overlay"></div>-->
+<!--											<button class="billboard__button _icon-search"></button>-->
+<!--											<img src="./img/programs/billboard2.webp" alt="Афиша Город Космос Люди">-->
+<!--										</div>&ndash;&gt;-->
+<!--									</div>-->
+<!--									<div class="billboard__program">-->
+<!--										<p>12.00 - 20.00 - маркет</p>-->
+<!--										<p>12.00 - мастер-класс от Карины Саитовой (Калуга)</p>-->
+<!--										<p>13.00 - мастер-класс от Светланы Фарниевой (Калуга)</p>-->
+<!--										<p>14.00 - мастер-класс от Яны Меркуловой (Обнинск «МастерГрад»)</p>-->
+<!--										<p>15.00 - мастер-класс от Андрея Молчановского (Москва)</p>-->
+<!--										<p>16.00 - мастер-класс от Светланы Слесаревой (Обнинск «МастерГрад»)</p>-->
+<!--										<p>17.00  -мастер-класс от Михаила Соломатина (Москва)</p>-->
+<!--									</div>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--							<div class="program__billboard billboard">-->
+<!--								<div class="billboard__header">-->
+<!--									<div class="billboard__date">Воскресенье, 03 октября</div>-->
+<!--									<div class="billboard__title">-->
+<!--									</div>-->
+<!--								</div>-->
+<!--								<div class="billboard__content">-->
+<!--									<div class="billboard__images">-->
+<!--										&lt;!&ndash;<div class="billboard__image-item _ibg pb177">-->
+<!--											<div class="billboard__overlay">-->
+<!--											</div>-->
+<!--											<button class="billboard__button _icon-search"></button>-->
+<!--											<img src="./img/programs/billboard3.webp" alt="Афиша Серебренные облака">-->
+<!--										</div>-->
+<!--										<div class="billboard__image-item _ibg pb140">-->
+<!--											<div class="billboard__overlay">-->
+<!--											</div>-->
+<!--											<button class="billboard__button _icon-search"></button>-->
+<!--											<img src="./img/programs/billboard4.webp" alt="DJ Uncle Deep">-->
+<!--										</div>&ndash;&gt;-->
+<!--									</div>-->
+<!--									<div class="billboard__program">-->
+<!--										<p>15.00 - мастер-класс от Маргариты Камардиной (Москва)</p>-->
+<!--										<p>17.00 - мастер-класс от Евгения Гоманова (Москва)</p>-->
+<!--										<p>19.00 - Вернисаж работ Андрея Молчановского. Локация-выставочный зал ИКЦ</p>-->
+<!--										<p>Перформанс от ИТБ & Студия хореографии ИКЦ. Руководитель- Ксения Голыжбина</p>-->
+<!--									</div>-->
+<!--								</div>-->
+<!--							</div>-->
 						</div>
 					</div>
 				</section>
