Added new partner icon - academy

--- a/#src/index.html
+++ b/#src/index.html
@@ -136,18 +136,23 @@
 									<div class="members__item item-member">
 										<div class="item-member__body">
 											<div class="item-member__header">
-												<div class="item-member__name">Левитина Ирина</div>
+												<div class="item-member__name">Становов Константин</div>
 												<div class="item-member__position"></div>
 											</div>
 											<div class="item-member__photo _ibg">
-												<img src="./img/members/Левитина.webp" alt="Левитина Ирина">
+												<img src="./img/members/Станов.webp" alt="Становов Константин">
 											</div>
 											<div class="item-member__description description-member">
 												<div class="description-member__part">
-													Закончила Абрамцевское художественно-промышленное училище им. В.М. Васнецова, отделение «художественная керамика». \n Член СХ России с 1990 г., народный мастер \n Работала художником на фаянсовом заводе в г. Симикаракорск. \n Познакомилась с замечательной Филимоновской игрушкой, осталась на родине промысла. С командой энтузиастов поднимала и возрождала народную игрушку.
+													Родился в 1984 году в городе Калуга. С 2010 года живёт и работает в Москве. Образование: МГТУ им Н.Э. Баумана - инженер-конструктор. Так же учился у отца - художника-абстракциониста и
+													Константиновича Становова
 												</div>
 												<div class="description-member__part description-member__part_hide">
-													Живет и работает в г. Калуге и в п. Одоеве, имеет свою мастерскую. \n Участник многих всероссийских и международных выставок. Работы хранятся в музеях России и мира.
+													Публикации работ AD Russia октябрь 2019 июль 2020', Elle Decoration Russia: Июнь 2020,
+													май 2021 апрель 2022 - Скульптура на обложке. Salon Interior Июнь 2020
+													Конкурс журнала Interior + Design "Russian Project" в категории "Art&Kraft" вхождение в
+													шорт-лист.
+													Работа с ведущими дизайнерами в России.
 												</div>
 											</div>
 											<div class="item-member__footer">
@@ -350,6 +355,9 @@
 								</div>
 								<div class="item-partners__image">
 									<img src="./img/partners/25.jpg" alt="Мастерград">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/28.jpg" alt="ЦСО">
 								</div>
 <!--								<div class="item-partners__image">
 									<img src="./img/partners/23.jpg" alt="Музей Чижевского">
