feat: new program

--- a/#src/index.html
+++ b/#src/index.html
@@ -248,66 +248,97 @@
 					<div class="program__container _container">
 						<h2 class="program__title title">Программа фестиваля</h2>
 						<div class="program__body">
-<!--							<div class="program__billboard billboard">-->
-<!--								<div class="billboard__header">-->
-<!--									<div class="billboard__date">Суббота, 02 октября</div>-->
-<!--									<div class="billboard__title">-->
-<!--										<h3>Открытие фестиваля современной скульптуры</h3>-->
-<!--									</div>-->
-<!--								</div>-->
-<!--								<div class="billboard__content">-->
-<!--									<div class="billboard__images">-->
-<!--										&lt;!&ndash;<div class="billboard__image-item _ibg pb140">-->
-<!--											<div class="billboard__overlay"></div>-->
-<!--											<button class="billboard__button _icon-search"></button>-->
-<!--											<img src="./img/programs/billboard1.webp" alt="Афиша фестиваля Млечный путь">-->
-<!--										</div>&ndash;&gt;-->
-<!--&lt;!&ndash;										<div class="billboard__image-item _ibg pb100">-->
-<!--											<div class="billboard__overlay"></div>-->
-<!--											<button class="billboard__button _icon-search"></button>-->
-<!--											<img src="./img/programs/billboard2.webp" alt="Афиша Город Космос Люди">-->
-<!--										</div>&ndash;&gt;-->
-<!--									</div>-->
-<!--									<div class="billboard__program">-->
-<!--										<p>12.00 - 20.00 - маркет</p>-->
-<!--										<p>12.00 - мастер-класс от Карины Саитовой (Калуга)</p>-->
-<!--										<p>13.00 - мастер-класс от Светланы Фарниевой (Калуга)</p>-->
-<!--										<p>14.00 - мастер-класс от Яны Меркуловой (Обнинск «МастерГрад»)</p>-->
-<!--										<p>15.00 - мастер-класс от Андрея Молчановского (Москва)</p>-->
-<!--										<p>16.00 - мастер-класс от Светланы Слесаревой (Обнинск «МастерГрад»)</p>-->
-<!--										<p>17.00  -мастер-класс от Михаила Соломатина (Москва)</p>-->
-<!--									</div>-->
-<!--								</div>-->
-<!--							</div>-->
-<!--							<div class="program__billboard billboard">-->
-<!--								<div class="billboard__header">-->
-<!--									<div class="billboard__date">Воскресенье, 03 октября</div>-->
-<!--									<div class="billboard__title">-->
-<!--									</div>-->
-<!--								</div>-->
-<!--								<div class="billboard__content">-->
-<!--									<div class="billboard__images">-->
-<!--										&lt;!&ndash;<div class="billboard__image-item _ibg pb177">-->
-<!--											<div class="billboard__overlay">-->
-<!--											</div>-->
-<!--											<button class="billboard__button _icon-search"></button>-->
-<!--											<img src="./img/programs/billboard3.webp" alt="Афиша Серебренные облака">-->
-<!--										</div>-->
-<!--										<div class="billboard__image-item _ibg pb140">-->
-<!--											<div class="billboard__overlay">-->
-<!--											</div>-->
-<!--											<button class="billboard__button _icon-search"></button>-->
-<!--											<img src="./img/programs/billboard4.webp" alt="DJ Uncle Deep">-->
-<!--										</div>&ndash;&gt;-->
-<!--									</div>-->
-<!--									<div class="billboard__program">-->
-<!--										<p>15.00 - мастер-класс от Маргариты Камардиной (Москва)</p>-->
-<!--										<p>17.00 - мастер-класс от Евгения Гоманова (Москва)</p>-->
-<!--										<p>19.00 - Вернисаж работ Андрея Молчановского. Локация-выставочный зал ИКЦ</p>-->
-<!--										<p>Перформанс от ИТБ & Студия хореографии ИКЦ. Руководитель- Ксения Голыжбина</p>-->
-<!--									</div>-->
-<!--								</div>-->
-<!--							</div>-->
+							<div class="program__billboard billboard">
+								<div class="billboard__header">
+									<div class="billboard__date">Пятница, 16 июня</div>
+									<div class="billboard__title">
+										<h3>Открытие фестиваля. Локация: Выставочный зал ИКЦ.</h3>
+									</div>
+								</div>
+								<div class="billboard__content">
+									<div class="billboard__images">
+										<!--<div class="billboard__image-item _ibg pb140">
+											<div class="billboard__overlay"></div>
+											<button class="billboard__button _icon-search"></button>
+											<img src="./img/programs/billboard1.webp" alt="Афиша фестиваля Млечный путь">
+										</div>-->
+<!--										<div class="billboard__image-item _ibg pb100">
+											<div class="billboard__overlay"></div>
+											<button class="billboard__button _icon-search"></button>
+											<img src="./img/programs/billboard2.webp" alt="Афиша Город Космос Люди">
+										</div>-->
+									</div>
+									<div class="billboard__program">
+										<p>18.30 - 20.00 - Вернисаж работ участников фестиваля. (16 июня -1 июля)</p>
+										<p>18.30- Перформанс от ИТБ.  Руководитель-Ксения Голыжбина. </p>
+									</div>
+								</div>
+							</div>
+							<div class="program__billboard billboard">
+								<div class="billboard__header">
+									<div class="billboard__date">Суббота, 17 июня</div>
+									<div class="billboard__title">Локация: внутренняя зона ИКЦ</div>
+								</div>
+								<div class="billboard__content">
+									<div class="billboard__images">
+										<!--<div class="billboard__image-item _ibg pb177">
+											<div class="billboard__overlay">
+											</div>
+											<button class="billboard__button _icon-search"></button>
+											<img src="./img/programs/billboard3.webp" alt="Афиша Серебренные облака">
+										</div>
+										<div class="billboard__image-item _ibg pb140">
+											<div class="billboard__overlay">
+											</div>
+											<button class="billboard__button _icon-search"></button>
+											<img src="./img/programs/billboard4.webp" alt="DJ Uncle Deep">
+										</div>-->
+									</div>
+									<div class="billboard__program">
+										<p>12.00-20.00 – Маркет изделий ручной работы (Мастерград)</p>
+										<p>12.00-13.00- Мастер-класс. Чирикова Ирина (Москва)</p>
+										<p>12.00- 13.00- Мастер-класс.  Хан Ольга (Москва)</p>
+										<p>13.30- 14.30- Мастер-класс.  Метсо Светлана (Москва)</p>
+										<p>13.30-14.30- Мастер-класс. Марамыгина Анна (Москва/Санкт-Петербург)</p>
+										<p>15.00 - 16.00- Мастер-класс. Сюзева Татьяна (Пермь/ Санкт-Петербург)</p>
+										<p>15.00-16.00- Мастер-класс. Салдина Анастасия (Санкт-Петербург)</p>
+										<p>16.30- 17.30- Мастер-класс. Жарикова Ирина (Санкт-Петербург)</p>
+										<p>16.30-17.30- Мастер-класс. Моргуновская Юлия(Москва)</p>
+									</div>
+								</div>
+							</div>
+							<div class="program__billboard billboard">
+								<div class="billboard__header">
+									<div class="billboard__date">Воскресенье, 18 июня</div>
+									<div class="billboard__title">Локация: внутренняя зона ИКЦ</div>
+								</div>
+								<div class="billboard__content">
+									<div class="billboard__images">
+										<!--<div class="billboard__image-item _ibg pb177">
+											<div class="billboard__overlay">
+											</div>
+											<button class="billboard__button _icon-search"></button>
+											<img src="./img/programs/billboard3.webp" alt="Афиша Серебренные облака">
+										</div>
+										<div class="billboard__image-item _ibg pb140">
+											<div class="billboard__overlay">
+											</div>
+											<button class="billboard__button _icon-search"></button>
+											<img src="./img/programs/billboard4.webp" alt="DJ Uncle Deep">
+										</div>-->
+									</div>
+									<div class="billboard__program">
+										<p>12.00-20.00 – Маркет изделий ручной работы (Мастерград)</p>
+										<p>12.00-13.00- Мастер-класс. Становов Константин (Москва)</p>
+										<p>12.00-13.00- Мастер-класс. Сафроненков Александр (Москва)</p>
+										<p>12.30- 13.30- Квест для детей «Царица Керамика»  (5+) Николаева Татьяна. (Калуга)</p>
+										<p>13.30-14.30- Мастер-класс. Балбанян Григор (Ереван/Москва)</p>
+										<p>13.30-14.30- Мастер-класс «Керамо-терапии «ТрансФормаЦиЯ»».  Енацкая Марина (Калуга ИКЦ) & Бычкова Алена (Калуга ЦСО)</p>
+										<p>15.00-16.00- Мастер-класс. Мастерская керамики ИКЦ.  Группа «Абстракция в керамике».</p>
+										<p>18.00-Закрытие фестиваля. Концерт Мazzltoff (г.Тула) (кофейня ПОСТКУЛЬТУРА). Локация: Арт-яма</p>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</section>
