feat: new team members and partner logos

--- a/#src/index.html
+++ b/#src/index.html
@@ -348,36 +348,24 @@
 							<h3 class="item-partners__title title">Партнеры</h3>
 							<div class="item-partners__intro">Если вы хотите стать партнером фестиваля, свяжитесь с нами, мы обсудим детали.</div>
 							<div class="item-partners__logos">
-<!--								<div class="item-partners__image">
-									<img src="./img/partners/1.png" alt="Торгово-промышленная палата Калужской области">
-								</div>-->
-<!--								<div class="item-partners__image">
-									<img src="./img/partners/2.png" alt="Государственный музей истории космонавтики им.К.Э.Циолковского">
-								</div>-->
-<!--								<div class="item-partners__image">
-									<img src="./img/partners/3.png" alt="Любомир">
-								</div>-->
-<!--								<div class="item-partners__image">
-									<img src="./img/partners/4.png" alt="Обучение и развитие">
-								</div>-->
-<!--								<div class="item-partners__image">
-									<img src="./img/partners/5.png" alt="ТВ">
-								</div>-->
-<!--								<div class="item-partners__image">
-									<img src="./img/partners/6.png" alt="Достояние">
-								</div>-->
-<!--								<div class="item-partners__image">
-									<img src="./img/partners/7.png" alt="Sky-lounge">
-								</div>-->
-<!--								<div class="item-partners__image">
-									<img src="./img/partners/8.png" alt="МГЕР">
-								</div>-->
-<!--								<div class="item-partners__image">
-									<img src="./img/partners/9.png" alt="TODOES Kaluga family 1371">
-								</div>-->
-<!--								<div class="item-partners__image">
-									<img src="./img/partners/10.png" alt="Образ Ансамбль танца">
-								</div>-->
+								<div class="item-partners__image">
+									<img src="./img/partners/33.jpg" alt="Кофейня посткультура">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/32.jpg" alt="Нежный бизнес">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/31.jpg" alt="Союз женщин России">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/13.png" alt="Танцевальная лаборатория Текст">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/29.jpg" alt="Академия керамики">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/30.jpg" alt="Старт">
+								</div>
 								<div class="item-partners__image">
 									<img src="./img/partners/11.png" alt="Suhl гостиница">
 								</div>
