--- a/#src/team.html
+++ b/#src/team.html
@@ -27,6 +27,24 @@
                     </div>
                     <div class="team__person person-team">
                         <div class="person-team__photo _ibg">
+                            <img src="./img/team/Фрей.webp" alt="Фрей">
+                        </div>
+                        <div class="person-team__info">
+                            <div class="person-team__name">Алексей Фрей</div>
+                            <div class="person-team__position">Дизайнер, художник</div>
+                        </div>
+                    </div>
+                    <div class="team__person person-team">
+                        <div class="person-team__photo _ibg">
+                            <img src="./img/team/Большакова.webp" alt="Большакова">
+                        </div>
+                        <div class="person-team__info">
+                            <div class="person-team__name">Анастасия Большакова</div>
+                            <div class="person-team__position">Фото и видео</div>
+                        </div>
+                    </div>
+                    <div class="team__person person-team">
+                        <div class="person-team__photo _ibg">
                             <img src="./img/team/Мельник.webp" alt="Мельник">
                         </div>
                         <div class="person-team__info">
@@ -41,15 +59,6 @@
                         <div class="person-team__info">
                             <div class="person-team__name">Наталья Головатюк</div>
                             <div class="person-team__position">Ведущая фестиваля, ведущая программы «Культурная среда» на Ника ТВ</div>
-                        </div>
-                    </div>-->
-                   <!-- <div class="team__person person-team">
-                        <div class="person-team__photo _ibg">
-                            <img src="./img/team/Большакова.webp" alt="Большакова">
-                        </div>
-                        <div class="person-team__info">
-                            <div class="person-team__name">Анастасия Большакова</div>
-                            <div class="person-team__position">Фото и видео</div>
                         </div>
                     </div>-->
 <!--                    <div class="team__person person-team">
